<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".presentation.ui.cart.CartFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:elevation="5dp"
    android:focusable="true"
    android:clickable="true"
    android:background="@color/white"
    android:id="@+id/cartFragment">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/tv_cart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cart"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        />


    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/view"
        android:background="#eee"
        app:layout_constraintTop_toBottomOf="@id/tv_cart"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rv_cart"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

        <TextView
            android:id="@+id/tv_noItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_item_in_the_cart"
            android:textAlignment="center"
            android:textSize="25sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btn_checkout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view"
            />

        <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/btn_checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/checkout"
        android:textAllCaps="false"
        />

</androidx.constraintlayout.widget.ConstraintLayout>


</layout>