<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/fragmentOrderPlaced"
    tools:context=".presentation.ui.orderplaced.OrderPlacedFragment">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_baseline_check_circle_24"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="50dp"
        android:id="@+id/iv_check"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintTop_toBottomOf="@id/iv_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/congratulations"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:id="@+id/tv_congrats"
        android:textColor="@color/black"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_congrats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:text="@string/your_order_has_been_placed"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/tv_orderPlaced"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginBottom="30dp"
        android:text="@string/continue_shopping"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:textAlignment="center"
        android:backgroundTint="@color/sky_blue"
        app:cornerRadius="30dp"
        android:id="@+id/btn_continueShopping"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>